--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "start": "serve -s build",
     "start:dev": "react-scripts start",
     "build": "react-scripts build",
+    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
